[package]
name = "alerter"
description = "Send messages to Slack"
version = "1.0.4"
authors = ["jan.veen@posteo.de"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "alerter"
path = "src/main.rs"

[[bin]]
name = "alert"
path = "src/alert.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
clap = "2.27.0"
log = "0.4"
serde_derive = "1.0"
serde_yaml = "0.8.7"
serde_json = "1.0.40"
nix = "0.17"
chrono = "0.4.6"
libc = "0.2.65"
systemd = "0.4"

[dependencies.serde]
version = "1.0.80"
features = ["derive"]

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

[dependencies.log4rs]
version = "0.11"
default-features = false
features = ["file", "pattern_encoder", "console_appender"]

[build-dependencies]
vergen = "3"
