[package]
name = "alerter"
description = "Send messages to Slack"
version = "1.0.6"
authors = ["jan.veen@posteo.de"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "alerter"
path = "src/main.rs"

[[bin]]
name = "alert"
path = "src/alert.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
clap = "2.33.3"
log = "0.4.11"
serde_derive = "1.0.115"
serde_yaml = "0.8.13"
serde_json = "1.0.57"
nix = "0.18"
chrono = "0.4.15"
libc = "0.2.76"
systemd = "0.5"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json", "blocking"]

[dependencies.log4rs]
version = "0.13"
default-features = false
features = ["file", "pattern_encoder", "console_appender"]

[build-dependencies]
vergen = "3"
