[package]
name = "alerter"
description = "Send messages to Slack"
version = "1.0.8"
authors = ["jan.veen@posteo.de"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "alerter"
path = "src/main.rs"

[[bin]]
name = "alert"
path = "src/alert.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
clap = "2.33.3"
log = "0.4.11"
serde_derive = "1.0.115"
serde_yaml = "0.8.13"
serde_json = "1.0.57"
nix = "0.19"
chrono = "0.4.15"
libc = "0.2.76"
systemd = "0.8"
url = "2.1.1"
tracing-subscriber = "0.2.15"
thiserror = "1.0.24"
tera = "1.5.0"

[dependencies.tokio-stream]
version = "0.1.3"
features = ["io-util", "net"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json", "blocking"]

[dependencies.log4rs]
version = "0.13"
default-features = false
features = ["file", "pattern_encoder", "console_appender", "yaml_format", "json_encoder"]

[dependencies.tokio]
version = "1.2.0"
features = ["full"]

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
branch = "master"

[build-dependencies]
vergen = "3"
